--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "graphql": "^14.3.1",
     "graphql-tag": "^2.10.3",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "^8.1.0",
+    "next": "^9.0.0",
     "next-with-apollo": "^4.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.8.6",
     "webpack": "^4.43.0"
